--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker Image
         uses: docker/build-push-action@v4
